# fluffy-observability

./: .gitignore  README.md
app/dotnet/: Dockerfile  Tiltfile  WeatherForecastApi.csproj
app/dotnet/Properties/: launchSettings.json
app/go/: Dockerfile  Tiltfile  go.mod  go.sum  main.go
app/python/: Dockerfile  Tiltfile  main.py  pyproject.toml
deploy/app/dotnet/: deployment.yaml  kustomization.yaml  otel-collector.yaml  otel-instrumentation.yaml  service.yaml
deploy/app/go/: api.yaml  grafana-dash.yaml  grafana-prometheus-data.yaml  grafana.yaml  kustomization.yaml  otel-collector.yaml  rule.yaml  service-monitor.yaml
deploy/app/python/: deployment.yaml  grafana.yaml  kustomization.yaml  otel-instrumentation.yaml  service-monitor.yaml  service.yaml
deploy/cert-manager/: kustomization.yaml
deploy/jaeger/: kustomization.yaml
deploy/k8s/prometheus/: alertmanager-config.yaml  alertmanager.yaml  kustomization.yaml  prometheus.yaml  rule.yaml
deploy/otel/: collector.yaml  instrumentation.yaml
deploy/prometheus/: alertmanager-config.yaml  alertmanager.yaml  kustomization.yaml  prometheus.yaml  rbac.yaml  service-monitor.yaml
